--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ paramiko==2.10.4
 werkzeug==2.2.3
 azure-cognitiveservices-vision-face==0.6.1
 msrest==0.7.1
-Pillow==9.4.0
+requests==2.31.0
+azure-storage-blob==12.11.0
